--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
         <section class="section benefits">
             <div class="container">
                 <ul class="list benefits-box">
-                    <li class="item">
+                    <li class="item icon-details">
                         <h3 class="benefits-title">Увага до деталей</h3>
                         <p class="benefits-item">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                     </li>
-                    <li class="item">
+                    <li class="item icon-punctuality">
                         <h3 class="benefits-title">Пунктуальність</h3>
                         <p class="benefits-item">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                     </li>
-                    <li class="item">
+                    <li class="item icon-planning">
                         <h3 class="benefits-title">Планування</h3>
                         <p class="benefits-item">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
-                    <li class="item">
+                    <li class="item icon-technologies">
                         <h3 class="benefits-title">Сучасні технології</h3>
                         <p class="benefits-item">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                     </li>
