--- a/index.html
+++ b/index.html
@@ -31,10 +31,20 @@
             </nav>
             <ul class="contacts-header list">
                 <li class="item">
-                    <a href="mailto:info@devstudio.com" class="mail-header link">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="mail-header link">
+                        <svg class="header-icon" width="16" height="12">
+                            <use href="./images/icons.svg#icon-envelope"></use>
+                        </svg>
+                        info@devstudio.com
+                    </a>
                 </li>
                 <li class="item">
-                    <a href="tel:+380961111111" class="tel-header link">+38 096 111 11 11</a>
+                    <a href="tel:+380961111111" class="tel-header link">
+                        <svg class="header-icon" width="10" height="16">
+                            <use href="./images/icons.svg#icon-smartphone"></use>
+                        </svg>
+                        +38 096 111 11 11
+                    </a>
                 </li>
             </ul>
         </div>
@@ -48,19 +58,39 @@
         <section class="section benefits">
             <div class="container">
                 <ul class="list benefits-box">
-                    <li class="item icon-details">
+                    <li class="item">
+                        <div class="benefits-content">
+                            <svg width="70" height="70">
+                                <use href="./images/icons.svg#icon-antenna"></use>
+                            </svg>
+                        </div>
                         <h3 class="benefits-title">Увага до деталей</h3>
                         <p class="benefits-item">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                     </li>
-                    <li class="item icon-punctuality">
+                    <li class="item">
+                        <div class="benefits-content">
+                            <svg width="70" height="70">
+                                <use href="./images/icons.svg#icon-clock"></use>
+                            </svg>
+                        </div>
                         <h3 class="benefits-title">Пунктуальність</h3>
                         <p class="benefits-item">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                     </li>
-                    <li class="item icon-planning">
+                    <li class="item">
+                        <div class="benefits-content">
+                            <svg width="70" height="70">
+                                <use href="./images/icons.svg#icon-diagram"></use>
+                            </svg>
+                        </div>
                         <h3 class="benefits-title">Планування</h3>
                         <p class="benefits-item">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
-                    <li class="item icon-technologies">
+                    <li class="item">
+                        <div class="benefits-content">
+                            <svg width="70" height="70">
+                                <use href="./images/icons.svg#icon-astronaut"></use>
+                            </svg>
+                        </div>
                         <h3 class="benefits-title">Сучасні технології</h3>
                         <p class="benefits-item">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                     </li>
@@ -92,6 +122,36 @@
                         <div class="name-position">
                             <h3 class="name">Ігор Дем'яненко</h3>
                             <p class="position">Product Designer</p>
+                            <ul class="actions list">
+                                <li class="item">
+                                    <a href="" class="social-link">
+                                        <svg class="team-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item">
+                                    <a href="">
+                                        <svg class="team-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item">
+                                    <a href="">
+                                        <svg class="team-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item">
+                                    <a href="">
+                                        <svg class="team-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="item">
