--- a/portfolio.html
+++ b/portfolio.html
@@ -31,10 +31,20 @@
             </nav>
             <ul class="contacts-header list">
                 <li class="item">
-                    <a href="mailto:info@devstudio.com" class="mail-header link">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="mail-header link">
+                        <svg class="header-icon" width="16" height="12">
+                            <use href="./images/icons.svg#icon-envelope"></use>
+                        </svg>
+                        info@devstudio.com
+                    </a>
                 </li>
                 <li class="item">
-                    <a href="tel:+380961111111" class="tel-header link">+38 096 111 11 11</a>
+                    <a href="tel:+380961111111" class="tel-header link">
+                        <svg class="header-icon" width="10" height="16">
+                            <use href="./images/icons.svg#icon-smartphone"></use>
+                        </svg>
+                        +38 096 111 11 11
+                    </a>
                 </li>
             </ul>
         </div>
