--- a/index.html
+++ b/index.html
@@ -123,29 +123,29 @@
                             <h3 class="name">Ігор Дем'яненко</h3>
                             <p class="position">Product Designer</p>
                             <ul class="actions list">
-                                <li class="item">
+                                <li class="item-icon">
                                     <a href="" class="social-link">
                                         <svg class="team-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="item">
-                                    <a href="">
+                                <li class="item-icon">
+                                    <a href="" class="social-link">
                                         <svg class="team-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="item">
-                                    <a href="">
+                                <li class="item-icon">
+                                    <a href="" class="social-link">
                                         <svg class="team-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="item">
-                                    <a href="">
+                                <li class="item-icon">
+                                    <a href="" class="social-link">
                                         <svg class="team-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
@@ -159,6 +159,36 @@
                         <div class="name-position">
                             <h3 class="name">Ольга Рєпіна</h3>
                             <p class="position">Frontend Developer</p>
+                            <ul class="actions list">
+                                <li class="item-icon">
+                                    <a href="" class="social-link">
+                                        <svg class="team-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-icon">
+                                    <a href="" class="social-link">
+                                        <svg class="team-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-icon">
+                                    <a href="" class="social-link">
+                                        <svg class="team-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-icon">
+                                    <a href="" class="social-link">
+                                        <svg class="team-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="item">
@@ -166,6 +196,36 @@
                         <div class="name-position">
                             <h3 class="name">Микола Тарасов</h3>
                             <p class="position">Marketing</p>
+                            <ul class="actions list">
+                                <li class="item-icon">
+                                    <a href="" class="social-link">
+                                        <svg class="team-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-icon">
+                                    <a href="" class="social-link">
+                                        <svg class="team-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-icon">
+                                    <a href="" class="social-link">
+                                        <svg class="team-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-icon">
+                                    <a href="" class="social-link">
+                                        <svg class="team-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="item">
@@ -173,7 +233,86 @@
                         <div class="name-position">
                             <h3 class="name">Михайло Єрмаков</h3>
                             <p class="position">UI Designer</p>
+                            <ul class="actions list">
+                                <li class="item-icon">
+                                    <a href="" class="social-link">
+                                        <svg class="team-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-icon">
+                                    <a href="" class="social-link">
+                                        <svg class="team-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-icon">
+                                    <a href="" class="social-link">
+                                        <svg class="team-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-icon">
+                                    <a href="" class="social-link">
+                                        <svg class="team-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="section">
+            <div class="container">
+                <h2 class="clients-title">Постійні клієнти</h2>
+                <ul class="clients list">
+                    <li class="item">
+                        <a href="" class="clients-link">
+                            <svg class="client-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-client1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="">
+                            <svg>
+                                <use></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="">
+                            <svg>
+                                <use></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="">
+                            <svg>
+                                <use></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="">
+                            <svg>
+                                <use></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="">
+                            <svg>
+                                <use></use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
             </div>
