--- a/index.html
+++ b/index.html
@@ -272,45 +272,45 @@
             <div class="container">
                 <h2 class="clients-title">Постійні клієнти</h2>
                 <ul class="clients list">
-                    <li class="item">
+                    <li class="item-clients">
                         <a href="" class="clients-link">
-                            <svg class="client-icon" width="106" height="60">
+                            <svg class="client-icon" width="41" height="47">
                                 <use href="./images/icons.svg#icon-client1"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="item">
-                        <a href="">
-                            <svg>
-                                <use></use>
+                    <li class="item-clients">
+                        <a href="" class="clients-link">
+                            <svg class="client-icon" width="40" height="52">
+                                <use href="./images/icons.svg#icon-client2"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="item">
-                        <a href="">
-                            <svg>
-                                <use></use>
+                    <li class="item-clients">
+                        <a href="" class="clients-link">
+                            <svg class="client-icon" width="44" height="41">
+                                <use href="./images/icons.svg#icon-client3"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="item">
-                        <a href="">
-                            <svg>
-                                <use></use>
+                    <li class="item-clients">
+                        <a href="" class="clients-link">
+                            <svg class="client-icon" width="84" height="41">
+                                <use href="./images/icons.svg#icon-client4"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="item">
-                        <a href="">
-                            <svg>
-                                <use></use>
+                    <li class="item-clients">
+                        <a href="" class="clients-link">
+                            <svg class="client-icon" width="63" height="45">
+                                <use href="./images/icons.svg#icon-client5"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="item">
-                        <a href="">
-                            <svg>
-                                <use></use>
+                    <li class="item-clients">
+                        <a href="" class="clients-link">
+                            <svg class="client-icon" width="94" height="44">
+                                <use href="./images/icons.svg#icon-client6"></use>
                             </svg>
                         </a>
                     </li>
