--- a/index.html
+++ b/index.html
@@ -320,19 +320,54 @@
     </main>
 
     <footer class="footer">
-        <div class="container">
-            <a href="./index.html" class="footer-logo link"><span class="blue-logo">Web</span>Studio</a>
-            <address>
-                <p class="address">м. Київ, пр-т Лесі Українки, 26</p>
-                <ul class="contacts-footer list">
-                    <li>
-                        <a href="mailto:info@devstudio.com" class="mail-footer link">info@devstudio.com</a>
+        <div class="container footer-content">
+            <div class="footer-addresses">
+                <a href="./index.html" class="footer-logo link"><span class="blue-logo">Web</span>Studio</a>
+                <address>
+                    <p class="address">м. Київ, пр-т Лесі Українки, 26</p>
+                    <ul class="contacts-footer list">
+                        <li>
+                            <a href="mailto:info@devstudio.com" class="mail-footer link">info@devstudio.com</a>
+                        </li>
+                        <li>
+                            <a href="tel:+380961111111" class="tel-footer link">+38 096 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+            <div class="footer-soc">
+                <p class="footer-soc-title">Приєднуйтесь</p>
+                <ul class="footer-actions list">
+                    <li class="item-footer-icon">
+                        <a href="" class="footer-social">
+                            <svg class="team-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
                     </li>
-                    <li>
-                        <a href="tel:+380961111111" class="tel-footer link">+38 096 111 11 11</a>
+                    <li class="item-footer-icon">
+                        <a href="" class="footer-social">
+                            <svg class="team-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item-footer-icon">
+                        <a href="" class="footer-social">
+                            <svg class="team-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item-footer-icon">
+                        <a href="" class="footer-social">
+                            <svg class="team-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 </body>
